# wandb_backup

./: README.md  pyproject.toml  requirements.txt  wandbBackupTool.py
src/wandb_backup/: wandb_backup.py
